<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Doctor.EditFragments.GeneralInfoFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <EditText
            android:id="@+id/ET_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="16dp"
            />

        <EditText
            android:id="@+id/ET_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textSize="16dp"
            android:singleLine="true" />

        <AutoCompleteTextView
            android:id="@+id/ET_Country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="Country"
            android:textSize="16sp" />


        <TextView
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ET_Category"/>
            <Button
                android:background="@drawable/lightsolid_withoutstroke_15dp"
                android:id="@+id/BT_add"
                android:text="@string/add"
                android:textColor="@color/mdtp_white"
                android:textSize="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />
        </LinearLayout>
        <FrameLayout
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <co.lujun.androidtagview.TagContainerLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/category_container"
                android:padding="10dp"
                app:container_enable_drag="false"
                app:horizontal_interval="10dp"
                app:vertical_interval="10dp"
                app:tag_clickable="true"
                app:tag_theme="pure_teal" />
        </FrameLayout>

    </LinearLayout>


    <Button
        android:id="@+id/BT_finish"
        android:text="@string/app_finish"
        android:textSize="14dp"
        android:layout_margin="15dp"
        android:textColor="@color/mdtp_white"
        android:background="@drawable/lightsolid_withoutstroke_15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"/>

</FrameLayout>