<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:minWidth="300dp"
    android:padding="10dp"
    >


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/price30m"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price2"
        android:textSize="16sp"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:inputType="number"
        android:id="@+id/text30m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"/>

</LinearLayout>

<LinearLayout
    android:layout_marginTop="15dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/price60m"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price1"
        android:inputType="textCapWords"
        android:textSize="16sp"
        android:padding="10dp"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:inputType="number"
        android:id="@+id/text60m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"/>

</LinearLayout>



<Button
    android:layout_gravity="center"
    android:id="@+id/btn_price"
    android:layout_margin="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/lightsolid_withoutstroke_15dp"
    android:text="@string/set"
    android:textColor="#fff"
    android:textSize="14sp"/>




</LinearLayout>