<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SharedActivity.RegisterationFragment.DoctorRegesterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/TIL_Username"
                >
                <EditText
                    android:id="@+id/ET_Username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username"
                    android:inputType="textCapWords"
                    android:textSize="16sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TIL_Password"
                >

                <in.anshul.libray.PasswordEditText
                    android:id="@+id/ET_Password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:textSize="16sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/TIL_Password1"
                >

                <in.anshul.libray.PasswordEditText
                    android:id="@+id/ET_Password1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/retry"
                    android:textSize="16sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TIL_Email"
                >
                <EditText
                    android:id="@+id/ET_Email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"

                    android:textSize="16sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TIL_country"
                >
                <AutoCompleteTextView
                    android:id="@+id/ET_Country"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapWords"
                    android:hint="Country"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TIL_ID"
                >
                <EditText
                    android:id="@+id/ET_ID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/national"

                    android:inputType="number"
                    android:textSize="16sp"
                    />
            </android.support.design.widget.TextInputLayout>




            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:inputType="textCapWords"

                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:inputType="textCapWords"
                        android:id="@+id/RB_Male"
                        android:textSize="16sp"
                        />

                    <RadioButton
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:inputType="textCapWords"
                        android:textColor="@color/colorPrimaryDark"

                        android:id="@+id/RB_Female"
                        android:textSize="16sp"
                        />

                </RadioGroup>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_countryPreference="us,in"
                    />

                <EditText
                    android:id="@+id/editText_carrierNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/enter"

                    android:inputType="phone"
                    android:textSize="16sp"
                    android:singleLine="true" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdate"
                    android:textColor="@color/colorPrimaryDark"
                    android:inputType="date"
                    android:textSize="16sp"
                    />
                <TextView
                    android:layout_weight="10"
                    android:textAlignment="center"
                    android:id="@+id/TV_ShowBirthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/ic_calendar"
                    android:textAlignment="center"
                    android:id="@+id/TV_Birthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:layout_marginLeft="35dp"
                    />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/TV_CV"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Uploud Your CV PDF "
                    android:textColor="@color/colorPrimaryDark"
                    />

                <ImageView
                    android:id="@+id/Bt_UploadCV"
                    android:src="@drawable/ic_upload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/TV_ID"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Uploud Syndicate ID photo "
                    android:textColor="@color/colorPrimaryDark"
                    />

                <ImageView
                    android:id="@+id/Bt_UploadID"
                    android:src="@drawable/ic_upload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    />


            </LinearLayout>



            <Button
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:id="@+id/BT_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@drawable/lightsolid_withoutstroke_15dp"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="20dp"
                />

        </LinearLayout>

    </ScrollView>

</FrameLayout>