<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:minWidth="300dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    >

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="28 March"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pName"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_name"
            android:textSize="16dp"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark"/>

        <Spinner
            android:focusable="true"
            android:id="@+id/spinner"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14dp"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark"/>


    </LinearLayout>



    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/from"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="16dp"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:textAlignment="center"
            android:enabled="false"
            android:inputType="datetime"
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp"/>

        <Button
            android:background="@drawable/ic_setclock"
            android:id="@+id/buttonOpen"
            android:layout_width="40dp"
            android:layout_height="40dp" />

    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/to"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/to"
            android:textSize="16dp"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:textAlignment="center"
            android:enabled="false"
            android:inputType="datetime"
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp"/>

        <Button
            android:background="@drawable/ic_setclock"
            android:id="@+id/buttonOpen2"
            android:layout_width="40dp"
            android:layout_height="40dp" />
    </LinearLayout>



    <Button
        android:textColor="@color/mdtp_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="10dp"
        android:id="@+id/btn"
        android:gravity="center"
        android:background="@drawable/lightsolid_withoutstroke_15dp"
        android:text="@string/set"
        android:textSize="14dp"/>




</LinearLayout>